Adicionado tela de cadastro e conexão com Firebase

--- a/app/src/main/res/values-pt/strings-ptBr.xml
+++ b/app/src/main/res/values-pt/strings-ptBr.xml
@@ -19,4 +19,8 @@
     <string name="hintPhone">Celular</string>
     <string name="btnSendSolution">Enviar solução</string>
     <string name="msgSucess">Enviado com sucesso</string>
+    <string name="titleAdmin">ADMIN CADASTRO</string>
+    <string name="cadastrar">REGISTRAR</string>
+    <string name="salario">Salário</string>
+    <string name="cargo">cargo</string>
 </resources>
