Final commit project.

--- a/app/src/main/res/values-pt/strings-ptBr.xml
+++ b/app/src/main/res/values-pt/strings-ptBr.xml
@@ -23,4 +23,5 @@
     <string name="cadastrar">REGISTRAR</string>
     <string name="salario">Salário</string>
     <string name="cargo">cargo</string>
+    <string name="titulo">Título</string>
 </resources>
