--- a/app/src/main/res/layout/activity_apresentation_project.xml
+++ b/app/src/main/res/layout/activity_apresentation_project.xml
@@ -88,4 +88,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/presentation_Phone" />
 
+    <Button
+        android:id="@+id/buttonSendQuestions"
+        android:layout_width="209dp"
+        android:layout_height="68dp"
+        android:text="Send Question"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_SendSolutionPresentation"
+        app:layout_constraintVertical_bias="0.347" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
