--- a/app/src/main/res/layout/emp_list_item.xml
+++ b/app/src/main/res/layout/emp_list_item.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:background="@color/marrom">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -13,7 +14,8 @@
         android:gravity="center"
         android:padding="16dp"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -25,12 +27,12 @@
                 android:id="@+id/tvEmpName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Emp Name"
                 android:layout_gravity="center"
                 android:gravity="center"
+                android:text="Nova Pergunta"
                 android:textColor="@color/black"
                 android:textSize="30sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
 
         </LinearLayout>
